# scene-aware-assistant

./: README.md  api_contract.md  pubspec.yaml
android/app/: build.gradle.kts
app_ai/: Makefile  pyproject.toml
app_ai/configs/: eval_crosswalk_test.yaml  eval_traffic.yaml  finetune_trafic.yaml
app_ai/evals/: predictions_20251217_221316.csv  predictions_20251217_222136.csv
app_ai/src/server/: server.py  test_server.py
app_ai/src/street_object_detection/: __init__.py  batching.py  callbacks.py  config.py  data_preparation.py  evaluate.py  fine_tune.py  inference.py  loaders.py  modal_infra.py  output_types.py  paths.py  peft.py  report.py  utils.py
app_ai/src/ui/: package.json
app_ai/src/ui/src/app/: app.html  app.ts
app_ai/src/ui/src/app/detector/: detector-module.ts  detector-service.spec.ts  detector-service.ts  vision-service.spec.ts  vision-service.ts
app_ai/src/ui/src/app/detector/detector-component/: detector-component.css  detector-component.html  detector-component.spec.ts  detector-component.ts
app_ai/src/ui/src/app/shared/: shared-module.ts
app_ai/src/ui/src/app/shared/file-uploader/: file-uploader.html  file-uploader.ts
app_ai/src/ui/src/app/shared/option/: option.html  option.spec.ts  option.ts
app_ai/src/ui/src/app/shared/option-selector/: option-selector.html  option-selector.spec.ts  option-selector.ts
backend/: requirements.txt  server.py
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+14 files in other folders)
